--- a/knn_from_scratch.ipynb
+++ b/knn_from_scratch.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# K-Nearest Neighbors (KNN) Algorithm\n",
-    "Below we define the methods to implement the KNN algorithm scratch. This easily became one of my favorite algorithms when I first learned about it in my Machine Learning class and today."
+    "Below we define the methods to implement the KNN algorithm scratch. This easily became one of my favorite algorithms when I first learned about it in my Machine Learning class. Here's a simple implementation of it."
    ]
   },
   {
